add sshrdp submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "osx-socks-proxy"]
 	path = osx-socks-proxy
 	url = /Users/johmicd/github_projects/osx-socks-proxy/
+[submodule "sshrdp"]
+	path = sshrdp
+	url = https://github.com:johmicd/sshrdp.git
